deployment/base/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-server
  namespace: saracinema
spec:
  selector:
    matchLabels:
      app: bot-server
  template:
    metadata:
      labels:
        app: bot-server
    spec:
      imagePullSecrets:
        - name: "sara-watch" 
      containers:
      - name: bot-server
        image:  registry.digitalocean.com/sara-watch/saracinema # built from source
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: http
