deployment/base/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot-server
  namespace: saracinema
spec:
  selector:
    app: bot-server
  ports:
    - name: http
      port: 80
      targetPort: 80
